@@ -31,6 +31,7 @@ Version 0.6.0~dev
 	* Support mpeg ps muxing in ffmpeg worker.
 	* Support dnxhd codec in ffmpeg worker, closes: #5900.
 	* Support pcm codec in ffmpeg worker.
+	* Update and make mpeg2_transcode params more consistent.
 
 Version 0.5.0 Released on 2012/03/29
 
